--- a/pages/math/addition.html
+++ b/pages/math/addition.html
@@ -67,6 +67,9 @@
                 opacity: 1;
             }
         }
+        .result-container p {
+            font-size: 1.5em;
+        }
     </style>
 </head>
 <body>
@@ -101,6 +104,7 @@
     <div id="resultContainer" class="result-container">
         <h2>Your Results</h2>
         <p id="finalScore"></p>
+        <div id="submittedAnswers"></div>
         <button id="exportResults">Export Results</button>
         <button id="exportPDF">Export Questions as PDF</button>
         <a href="../../index.html">Back to Index</a>
