--- a/index.html
+++ b/index.html
@@ -3,15 +3,94 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>Math Practice Tool</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            margin: 0;
+            padding: 0;
+            color: #333;
+        }
+        .container {
+            width: 80%;
+            max-width: 900px;
+            margin: 50px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            text-align: center;
+            color: #007BFF;
+            margin-bottom: 30px;
+        }
+        .info {
+            margin-bottom: 20px;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            background-color: #fafafa;
+        }
+        .info h2 {
+            margin-top: 0;
+            color: #333;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        li {
+            margin: 10px 0;
+        }
+        a {
+            text-decoration: none;
+            color: #007BFF;
+            font-size: 1.2em;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        footer {
+            text-align: center;
+            margin-top: 30px;
+            font-size: 0.9em;
+            color: #777;
+        }
+    </style>
 </head>
 <body>
-<h1>Math</h1>
-<ul>
-    <li><a href="pages/math/addition.html">1.1 Addition</a></li>
-    <li><a href="pages/math/subtraction.html">1.2 Subtraction</a></li>
-    <li><a href="pages/math/multiplication.html">1.3 Multiplication</a></li>
-    <li><a href="pages/math/division.html">1.4 Division</a></li>
-</ul>
+<div class="container">
+    <h1>Math Practice Tool</h1>
+
+    <div class="info">
+        <h2>1.1 Addition</h2>
+        <p>This section helps you practice addition problems. Configure the range of numbers, the number of questions, and whether you'd like a timer. The questions are displayed one at a time, and you can submit your answers to move to the next question.</p>
+        <a href="pages/math/addition.html">Start Addition Practice</a>
+    </div>
+
+    <div class="info">
+        <h2>1.2 Subtraction</h2>
+        <p>Practice subtraction with customizable settings for number ranges, question quantity, and timers. Each question is shown one by one, and you'll need to input your answer to proceed.</p>
+        <a href="pages/math/subtraction.html">Start Subtraction Practice</a>
+    </div>
+
+    <div class="info">
+        <h2>1.3 Multiplication</h2>
+        <p>This section offers practice with multiplication problems. Adjust the number range, the number of questions, and the timer to fit your needs. Each question will be presented individually, and you can answer them one by one.</p>
+        <a href="pages/math/multiplication.html">Start Multiplication Practice</a>
+    </div>
+
+    <div class="info">
+        <h2>1.4 Division</h2>
+        <p>Improve your division skills with configurable settings for range, quantity, and timer. Questions are displayed one at a time, and you must answer them to continue.</p>
+        <a href="pages/math/division.html">Start Division Practice</a>
+    </div>
+</div>
+
+<footer>
+    <p>&copy; 2024 Dinesh Kumar S Tool. All rights reserved.</p>
+</footer>
 </body>
 </html>
