--- a/index.html
+++ b/index.html
@@ -88,71 +88,72 @@
         <a href="pages/math/division.html">Start Division Practice</a>
     </div>
 
-    <div class="info">
-        <h2>1.5 Time</h2>
-        <p>Practice time-related problems, including reading clocks and calculating time differences. This section will help you become more proficient in understanding and managing time.</p>
-        <a href="pages/math/time.html">Start Time Practice</a>
-    </div>
+
 
     <div class="info">
-        <h2>1.6 Greater Than, Less Than, Equal</h2>
+        <h2>1.5 Greater Than, Less Than, Equal</h2>
         <p>Learn to compare numbers with exercises on greater than, less than, and equal. This section is designed to improve your number comparison skills.</p>
-        <a href="pages/math/compare.html">Start Comparison Practice</a>
+        <a href="pages/math/comparison.html">Start Comparison Practice</a>
     </div>
-
     <div class="info">
-        <h2>1.7 Geometry - Triangle</h2>
-        <p>Explore problems related to triangles, including their properties and calculations. This section will help you understand various aspects of triangles.</p>
-        <a href="pages/math/geometry-triangle.html">Start Triangle Geometry Practice</a>
-    </div>
-
-    <div class="info">
-        <h2>1.8 Geometry - 2D Shapes</h2>
-        <p>Practice problems related to 2D shapes such as squares, rectangles, and circles. This section covers various aspects of 2D geometric shapes.</p>
-        <a href="pages/math/geometry-2d.html">Start 2D Shapes Geometry Practice</a>
-    </div>
-
-    <div class="info">
-        <h2>1.9 Geometry - 3D Shapes</h2>
-        <p>Learn about 3D shapes including cubes, spheres, and pyramids. This section helps you understand the properties and calculations related to 3D geometric shapes.</p>
-        <a href="pages/math/geometry-3d.html">Start 3D Shapes Geometry Practice</a>
-    </div>
-
-    <div class="info">
-        <h2>1.10 Statistics - Reading Tables</h2>
-        <p>Practice interpreting and analyzing data presented in tables. This section will improve your skills in understanding and extracting information from tables.</p>
-        <a href="pages/math/statistics-tables.html">Start Reading Tables Practice</a>
-    </div>
-
-    <div class="info">
-        <h2>1.11 Statistics - Reading Graphs</h2>
-        <p>Enhance your ability to read and interpret data from graphs. This section covers various types of graphs and how to analyze the information they present.</p>
-        <a href="pages/math/statistics-graphs.html">Start Reading Graphs Practice</a>
-    </div>
-
-    <div class="info">
-        <h2>1.12 Money</h2>
-        <p>Practice problems related to money, including calculations with different denominations and making change. This section will help you manage and understand money better.</p>
-        <a href="pages/math/money.html">Start Money Practice</a>
-    </div>
-
-    <div class="info">
-        <h2>1.13 Doubling</h2>
+        <h2>1.6 Doubling</h2>
         <p>Learn how to double numbers with exercises that help reinforce your understanding of this concept. This section provides various problems to practice doubling.</p>
         <a href="pages/math/doubling.html">Start Doubling Practice</a>
     </div>
 
     <div class="info">
-        <h2>1.14 Halving</h2>
+        <h2>1.7 Halving</h2>
         <p>Practice halving numbers with problems designed to improve your skills in dividing numbers by two. This section covers various halving exercises.</p>
         <a href="pages/math/halving.html">Start Halving Practice</a>
     </div>
 
     <div class="info">
-        <h2>1.15 Multiplication Tables</h2>
+        <h2>1.8 Multiplication Tables</h2>
         <p>Practice multiplication tables to enhance your quick recall of multiplication facts. This section includes exercises to help you master multiplication tables.</p>
         <a href="pages/math/multiplication-tables.html">Start Multiplication Tables Practice</a>
     </div>
+    <div class="info">
+        <h2>1.9 Time (work in progress)</h2>
+        <p>Practice time-related problems, including reading clocks and calculating time differences. This section will help you become more proficient in understanding and managing time.</p>
+        <a href="pages/math/time.html">Start Time Practice</a>
+    </div>
+    <div class="info">
+        <h2>1.10 Geometry - Triangle (work in progress)</h2>
+        <p>Explore problems related to triangles, including their properties and calculations. This section will help you understand various aspects of triangles.</p>
+        <a href="pages/math/geometry-triangle.html">Start Triangle Geometry Practice</a>
+    </div>
+
+    <div class="info">
+        <h2>1.11 Geometry - 2D Shapes (work in progress)</h2>
+        <p>Practice problems related to 2D shapes such as squares, rectangles, and circles. This section covers various aspects of 2D geometric shapes.</p>
+        <a href="pages/math/geometry-2d.html">Start 2D Shapes Geometry Practice</a>
+    </div>
+
+    <div class="info">
+        <h2>1.12 Geometry - 3D Shapes (work in progress)</h2>
+        <p>Learn about 3D shapes including cubes, spheres, and pyramids. This section helps you understand the properties and calculations related to 3D geometric shapes.</p>
+        <a href="pages/math/geometry-3d.html">Start 3D Shapes Geometry Practice</a>
+    </div>
+
+    <div class="info">
+        <h2>1.13 Statistics - Reading Tables (work in progress)</h2>
+        <p>Practice interpreting and analyzing data presented in tables. This section will improve your skills in understanding and extracting information from tables.</p>
+        <a href="pages/math/statistics-tables.html">Start Reading Tables Practice</a>
+    </div>
+
+    <div class="info">
+        <h2>1.14 Statistics - Reading Graphs (work in progress)</h2>
+        <p>Enhance your ability to read and interpret data from graphs. This section covers various types of graphs and how to analyze the information they present.</p>
+        <a href="pages/math/statistics-graphs.html">Start Reading Graphs Practice</a>
+    </div>
+
+    <div class="info">
+        <h2>1.15 Money (work in progress)</h2>
+        <p>Practice problems related to money, including calculations with different denominations and making change. This section will help you manage and understand money better.</p>
+        <a href="pages/math/money.html">Start Money Practice</a>
+    </div>
+
+
 </div>
 
 <footer>
