--- a/pages/math/halving.html
+++ b/pages/math/halving.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comparison Practice</title>
+    <title>Halving Practice</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -28,7 +28,7 @@
         .form-group {
             margin-bottom: 20px;
         }
-        input[type="number"], button, select {
+        input[type="number"], button {
             font-size: 1.5em;
             padding: 10px;
             margin: 5px;
@@ -41,7 +41,7 @@
         .question-container {
             font-size: 2em;
         }
-        .answer-select {
+        .answer-input {
             font-size: 1.5em;
             padding: 10px;
             width: 100%;
@@ -50,21 +50,6 @@
         .submitted-values {
             font-size: 1.2em;
             margin-top: 20px;
-            height: 150px; /* Adjust the height as needed */
-            overflow: hidden; /* Optional: hides overflow if content exceeds height */
-            line-height: 50px; /* Centers text vertically if you are using single-line text */
-        }
-        #submittedValues {
-            height: 200px; /* Adjust height as needed */
-            overflow-y: auto; /* Enables vertical scrolling */
-            border: 1px solid #ddd; /* Optional: adds a border for better visibility */
-            padding: 10px; /* Optional: adds padding inside the container */
-            box-sizing: border-box; /* Ensures padding and border are included in the height */
-        }
-
-        .scroll-animation {
-            margin: 0; /* Removes default margins */
-            padding: 5px 0; /* Optional: adds padding between items */
         }
         .hidden {
             display: none;
@@ -89,7 +74,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Comparison Practice</h1>
+    <h1>Halving Practice</h1>
     <form id="configForm">
         <div class="form-group">
             <label for="range">Select number range:</label><br>
@@ -101,6 +86,10 @@
             <input type="number" id="quantity" min="1" required>
         </div>
         <div class="form-group">
+            <label for="roundNumbers">Only round numbers:</label>
+            <input type="checkbox" id="roundNumbers">
+        </div>
+        <div class="form-group">
             <label for="timer">Include timer:</label>
             <input type="checkbox" id="timer">
         </div>
@@ -109,11 +98,7 @@
 
     <div class="question-container" id="questionContainer">
         <p id="question"></p>
-        <select id="answerSelect" class="answer-select">
-            <option value=">">&gt; (Greater than)</option>
-            <option value="<">&lt; (Less than)</option>
-            <option value="=">= (Equal)</option>
-        </select>
+        <input type="number" id="answerInput" class="answer-input" placeholder="Your answer">
         <button id="submitAnswer">Submit</button>
         <p id="score"></p>
         <p id="timerDisplay" class="hidden"></p>
@@ -134,7 +119,7 @@
     const configForm = document.getElementById('configForm');
     const questionContainer = document.getElementById('questionContainer');
     const questionElem = document.getElementById('question');
-    const answerSelect = document.getElementById('answerSelect');
+    const answerInput = document.getElementById('answerInput');
     const submitAnswerBtn = document.getElementById('submitAnswer');
     const scoreElem = document.getElementById('score');
     const timerDisplay = document.getElementById('timerDisplay');
@@ -148,6 +133,7 @@
     let score = 0;
     let timerInterval;
     let includeTimer = false;
+    let roundNumbersOnly = false;
     let submissions = [];
 
     configForm.addEventListener('submit', function (event) {
@@ -159,6 +145,7 @@
         const rangeMin = parseInt(document.getElementById('rangeMin').value);
         const rangeMax = parseInt(document.getElementById('rangeMax').value);
         const quantity = parseInt(document.getElementById('quantity').value);
+        roundNumbersOnly = document.getElementById('roundNumbers').checked;
         includeTimer = document.getElementById('timer').checked;
         generateQuestions(rangeMin, rangeMax, quantity);
         displayQuestion();
@@ -172,49 +159,40 @@
     function generateQuestions(min, max, quantity) {
         questions = [];
         for (let i = 0; i < quantity; i++) {
-            const num1 = Math.floor(Math.random() * (max - min + 1)) + min;
-            const num2 = Math.floor(Math.random() * (max - min + 1)) + min;
-            questions.push({ num1, num2 });
+            let num;
+            if (roundNumbersOnly) {
+                num = Math.floor(Math.random() * (max - min + 1)) + min;
+                if (num % 2 !== 0) {
+                    num += 1; // Ensure the number is even for clean halving
+                }
+            } else {
+                num = Math.floor(Math.random() * (max - min + 1)) + min;
+            }
+            questions.push({ num });
         }
     }
 
     function displayQuestion() {
         if (currentQuestionIndex < questions.length) {
-            const { num1, num2 } = questions[currentQuestionIndex];
-            questionElem.innerHTML = `${num1} ? ${num2}`;
-            answerSelect.value = "";
+            const { num } = questions[currentQuestionIndex];
+            questionElem.innerHTML = `Half of ${num}`;
+            answerInput.value = '';
+            answerInput.focus();
         } else {
             endGame();
         }
     }
 
     submitAnswerBtn.addEventListener('click', function () {
-        const selectedOperator = answerSelect.value;
-        const { num1, num2 } = questions[currentQuestionIndex];
-
-        let isCorrect = false;
-        switch (selectedOperator) {
-            case '>':
-                isCorrect = num1 > num2;
-                break;
-            case '<':
-                isCorrect = num1 < num2;
-                break;
-            case '=':
-                isCorrect = num1 === num2;
-                break;
-            case '>=':
-                isCorrect = num1 >= num2;
-                break;
-            case '<=':
-                isCorrect = num1 <= num2;
-                break;
-        }
+        const userAnswer = parseFloat(answerInput.value);
+        const { num } = questions[currentQuestionIndex];
+        const correctAnswer = num / 2;
+        const isCorrect = userAnswer === correctAnswer;
 
         submissions.push({
-            question: `${num1} ? ${num2}`,
-            correctAnswer: getCorrectOperator(num1, num2),
-            userAnswer: selectedOperator,
+            question: `Half of ${num}`,
+            correctAnswer,
+            userAnswer,
             isCorrect
         });
 
@@ -223,19 +201,11 @@
         }
 
         scoreElem.textContent = `Score: ${score}`;
-        submittedValuesElem.innerHTML += `<p>${num1} ${selectedOperator} ${num2} ${isCorrect ? '✔️' : '❌'}</p>`;
+        submittedValuesElem.innerHTML += `<p>Half of ${num} is ${userAnswer} ${isCorrect ? '✔️' : '❌'}</p>`;
 
         currentQuestionIndex++;
         displayQuestion();
     });
-
-    function getCorrectOperator(num1, num2) {
-        if (num1 > num2) return '>';
-        if (num1 < num2) return '<';
-        if (num1 === num2) return '=';
-        if (num1 >= num2) return '>=';
-        if (num1 <= num2) return '<=';
-    }
 
     function endGame() {
         questionContainer.style.display = 'none';
@@ -243,7 +213,7 @@
         finalScoreElem.textContent = `Final Score: ${score}/${questions.length}`;
         submissions.forEach(submission => {
             const answerElement = document.createElement('p');
-            answerElement.textContent = `${submission.question} (${submission.correctAnswer}) (Your answer: ${submission.userAnswer}) ${submission.isCorrect ? '✔️' : '❌'}`;
+            answerElement.textContent = `${submission.question} = ${submission.correctAnswer} (Your answer: ${submission.userAnswer}) ${submission.isCorrect ? '✔️' : '❌'}`;
             submittedAnswersElem.appendChild(answerElement);
         });
     }
@@ -273,12 +243,18 @@
     });
 
     document.getElementById('exportPDF').addEventListener('click', function () {
-        const questionsText = questions.map(q => `${q.num1} ? ${q.num2}`).join('\n');
+        const questionsText = questions.map(q => `Half of ${q.num}`).join('\n');
         const blob = new Blob([questionsText], { type: 'application/pdf' });
         const link = document.createElement('a');
         link.href = URL.createObjectURL(blob);
         link.download = 'questions.pdf';
         link.click();
+    });
+    // Add the event listener for pressing Enter to submit the answer
+    answerInput.addEventListener('keydown', function(event) {
+        if (event.key === 'Enter') {
+            submitAnswerBtn.click(); // Trigger the button click when Enter is pressed
+        }
     });
 </script>
 </body>
