Adding other topics

--- a/pages/math/comparison.html
+++ b/pages/math/comparison.html
@@ -224,7 +224,7 @@
 
         scoreElem.textContent = `Score: ${score}`;
         submittedValuesElem.innerHTML += `<p>${num1} ${selectedOperator} ${num2} ${isCorrect ? '✔️' : '❌'}</p>`;
-
+        submittedValuesElem.scrollTop = submittedValuesElem.scrollHeight;
         currentQuestionIndex++;
         displayQuestion();
     });
