--- a/index.html
+++ b/index.html
@@ -112,6 +112,13 @@
         <p>Practice multiplication tables to enhance your quick recall of multiplication facts. This section includes exercises to help you master multiplication tables.</p>
         <a href="pages/math/multiplication-tables.html">Start Multiplication Tables Practice</a>
     </div>
+
+    <div class="info">
+        <h2>1.8.1 Sorting Numbers</h2>
+        <p>Practice a sorting numbers game where the user needs to drag and arrange unsorted numbers in the correct order.</p>
+        <a href="pages/math/sorting.html">Start Sorting numbers Practice</a>
+    </div>
+
     <div class="info">
         <h2>1.9 Time (work in progress)</h2>
         <p>Practice time-related problems, including reading clocks and calculating time differences. This section will help you become more proficient in understanding and managing time.</p>
