--- a/index.html
+++ b/index.html
@@ -114,51 +114,53 @@
     </div>
 
     <div class="info">
-        <h2>1.8.1 Sorting Numbers</h2>
+        <h2>1.9 Sorting Numbers</h2>
         <p>Practice a sorting numbers game where the user needs to drag and arrange unsorted numbers in the correct order.</p>
         <a href="pages/math/sorting.html">Start Sorting numbers Practice</a>
     </div>
 
     <div class="info">
-        <h2>1.9 Time (work in progress)</h2>
+        <h2>1.10 Money</h2>
+        <p>Practice problems related to money, including calculations with different denominations and making change. This section will help you manage and understand money better.</p>
+        <a href="pages/math/money.html">Start Money Practice</a>
+    </div>
+
+
+    <div class="info">
+        <h2>1.11 Time (work in progress)</h2>
         <p>Practice time-related problems, including reading clocks and calculating time differences. This section will help you become more proficient in understanding and managing time.</p>
         <a href="pages/math/time.html">Start Time Practice</a>
     </div>
     <div class="info">
-        <h2>1.10 Geometry - Triangle (work in progress)</h2>
+        <h2>1.12 Geometry - Triangle (work in progress)</h2>
         <p>Explore problems related to triangles, including their properties and calculations. This section will help you understand various aspects of triangles.</p>
         <a href="pages/math/geometry-triangle.html">Start Triangle Geometry Practice</a>
     </div>
 
     <div class="info">
-        <h2>1.11 Geometry - 2D Shapes (work in progress)</h2>
+        <h2>1.13 Geometry - 2D Shapes (work in progress)</h2>
         <p>Practice problems related to 2D shapes such as squares, rectangles, and circles. This section covers various aspects of 2D geometric shapes.</p>
         <a href="pages/math/geometry-2d.html">Start 2D Shapes Geometry Practice</a>
     </div>
 
     <div class="info">
-        <h2>1.12 Geometry - 3D Shapes (work in progress)</h2>
+        <h2>1.14 Geometry - 3D Shapes (work in progress)</h2>
         <p>Learn about 3D shapes including cubes, spheres, and pyramids. This section helps you understand the properties and calculations related to 3D geometric shapes.</p>
         <a href="pages/math/geometry-3d.html">Start 3D Shapes Geometry Practice</a>
     </div>
 
     <div class="info">
-        <h2>1.13 Statistics - Reading Tables (work in progress)</h2>
+        <h2>1.15 Statistics - Reading Tables (work in progress)</h2>
         <p>Practice interpreting and analyzing data presented in tables. This section will improve your skills in understanding and extracting information from tables.</p>
         <a href="pages/math/statistics-tables.html">Start Reading Tables Practice</a>
     </div>
 
     <div class="info">
-        <h2>1.14 Statistics - Reading Graphs (work in progress)</h2>
+        <h2>1.16 Statistics - Reading Graphs (work in progress)</h2>
         <p>Enhance your ability to read and interpret data from graphs. This section covers various types of graphs and how to analyze the information they present.</p>
         <a href="pages/math/statistics-graphs.html">Start Reading Graphs Practice</a>
     </div>
 
-    <div class="info">
-        <h2>1.15 Money (work in progress)</h2>
-        <p>Practice problems related to money, including calculations with different denominations and making change. This section will help you manage and understand money better.</p>
-        <a href="pages/math/money.html">Start Money Practice</a>
-    </div>
 
 
 </div>
