--- a/pages/math/money.html
+++ b/pages/math/money.html
@@ -145,10 +145,13 @@
 
     tryAgainDenominationBtn.addEventListener('click', function () {
         resetDenominationGame();
+        startGame();
+
     });
 
     tryAgainShoppingBtn.addEventListener('click', function () {
         resetShoppingGame();
+        startGame();
     });
 
     function startGame() {
