--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
     <div class="info">
         <h2>1.11 Time (work in progress)</h2>
         <p>Practice time-related problems, including reading clocks and calculating time differences. This section will help you become more proficient in understanding and managing time.</p>
-        <a href="pages/math/time.html">Start Time Practice</a>
+        <a href="pages/math/time.html">Start Time difference Practice</a>
+        <a href="pages/math/anolog-time.html">Start reading Time Practice</a>
     </div>
     <div class="info">
         <h2>1.12 Geometry - Triangle (work in progress)</h2>
