--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -127,9 +127,10 @@
 
 
     <div class="info">
-        <h2>1.11 Time (work in progress)</h2>
+        <h2>1.11 Time </h2>
         <p>Practice time-related problems, including reading clocks and calculating time differences. This section will help you become more proficient in understanding and managing time.</p>
         <a href="pages/math/time.html">Start Time difference Practice</a>
+        </br>
         <a href="pages/math/anolog-time.html">Start reading Time Practice</a>
     </div>
     <div class="info">
