Adding and fixing issues

--- a/pages/math/division.html
+++ b/pages/math/division.html
@@ -101,6 +101,14 @@
             <input type="number" id="quantity" min="1" required>
         </div>
         <div class="form-group">
+            <label for="zeroReminder">Only include divisions with zero reminders (e.g., perfect division):</label>
+            <input type="checkbox" id="zeroReminder" checked>
+        </div>
+        <div class="form-group">
+            <label for="avoidSameNumbers">Avoid same multiplier and multiplicand (e.g., num1 ≠ num2):</label>
+            <input type="checkbox" id="avoidSameNumbers" checked>
+        </div>
+        <div class="form-group">
             <label for="timer">Include timer:</label>
             <input type="checkbox" id="timer">
         </div>
