--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <a href="pages/math/anolog-time.html">Start Time reading Practice</a>
     </div>
     <div class="info">
-        <h2>1.12 Geometry - Triangle (work in progress)</h2>
+        <h2>1.12 Geometry - Triangle</h2>
         <p>Explore problems related to triangles, including their properties and calculations. This section will help you understand various aspects of triangles.</p>
         <a href="pages/math/geometry-triangle.html">Start Triangle Geometry Practice</a>
     </div>
