Adding all leasons

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -140,25 +140,27 @@
     </div>
 
     <div class="info">
-        <h2>1.13 Geometry - 2D Shapes (work in progress)</h2>
+        <h2>1.13 Geometry - 2D Shapes</h2>
         <p>Practice problems related to 2D shapes such as squares, rectangles, and circles. This section covers various aspects of 2D geometric shapes.</p>
-        <a href="pages/math/geometry-2d.html">Start 2D Shapes Geometry Practice</a>
+        <a href="pages/math/geometry-2d.html">Start 2D Shapes Geometry Practice - level 1</a>
+<!--        </br>-->
+<!--        <a href="pages/math/geometry-2d-level-2.html">Start 2D Shapes Geometry Practice - level 2</a>-->
     </div>
 
     <div class="info">
-        <h2>1.14 Geometry - 3D Shapes (work in progress)</h2>
+        <h2>1.14 Geometry - 3D Shapes</h2>
         <p>Learn about 3D shapes including cubes, spheres, and pyramids. This section helps you understand the properties and calculations related to 3D geometric shapes.</p>
         <a href="pages/math/geometry-3d.html">Start 3D Shapes Geometry Practice</a>
     </div>
 
     <div class="info">
-        <h2>1.15 Statistics - Reading Tables (work in progress)</h2>
+        <h2>1.15 Statistics - Reading Tables</h2>
         <p>Practice interpreting and analyzing data presented in tables. This section will improve your skills in understanding and extracting information from tables.</p>
         <a href="pages/math/statistics-tables.html">Start Reading Tables Practice</a>
     </div>
 
     <div class="info">
-        <h2>1.16 Statistics - Reading Graphs (work in progress)</h2>
+        <h2>1.16 Statistics - Reading Graphs</h2>
         <p>Enhance your ability to read and interpret data from graphs. This section covers various types of graphs and how to analyze the information they present.</p>
         <a href="pages/math/statistics-graphs.html">Start Reading Graphs Practice</a>
     </div>
