--- a/pages/math/anolog-time.html
+++ b/pages/math/anolog-time.html
@@ -217,6 +217,7 @@
 <button id="tryAgain" class="hidden">Try Again</button>
 <p id="resultMessage"></p>
 <p class="score">Score: <span id="score">0</span>/10</p>
+<a href="../../index.html">Back to Index</a>
 
 <script>
     const time = document.querySelector(".hours");
