--- a/pages/math/doubling.html
+++ b/pages/math/doubling.html
@@ -78,8 +78,8 @@
     <form id="configForm">
         <div class="form-group">
             <label for="range">Select number range:</label><br>
-            <input type="number" id="rangeMin" placeholder="Min" required>
-            <input type="number" id="rangeMax" placeholder="Max" required>
+            <input type="number" id="rangeMin" placeholder="Min" value="1" required>
+            <input type="number" id="rangeMax" placeholder="Max" value="50" required>
         </div>
         <div class="form-group">
             <label for="quantity">Number of questions:</label><br>
