--- a/pages/math/geometry-2d.html
+++ b/pages/math/geometry-2d.html
@@ -87,6 +87,7 @@
     <button id="tryAgain" class="hidden">Try Again</button>
     <p id="resultMessage" class="hidden"></p>
     <p class="score hidden">Score: <span id="score">0</span>/10</p>
+    <a href="../../index.html">Back to Index</a>
 </div>
 
 <script>
