--- a/pages/math/money.html
+++ b/pages/math/money.html
@@ -108,6 +108,7 @@
         <h2>Your Results</h2>
         <button id="retryButton">Retry</button>
     </div>
+    <a href="../../index.html">Back to Index</a>
 </div>
 
 <script>
