--- a/pages/math/sorting.html
+++ b/pages/math/sorting.html
@@ -104,6 +104,7 @@
         <p id="resultMessage"></p>
         <button id="retryButton">Retry</button>
     </div>
+    <a href="../../index.html">Back to Index</a>
 </div>
 
 <script>
