--- a/pages/math/geometry-triangle.html
+++ b/pages/math/geometry-triangle.html
@@ -72,6 +72,7 @@
     <button id="tryAgain" class="hidden">Try Again</button>
     <p id="resultMessage"></p>
     <p class="score">Score: <span id="score">0</span>/10</p>
+    <a href="../../index.html">Back to Index</a>
 </div>
 
 <script>
