--- a/pages/math/halving.html
+++ b/pages/math/halving.html
@@ -78,12 +78,12 @@
     <form id="configForm">
         <div class="form-group">
             <label for="range">Select number range:</label><br>
-            <input type="number" id="rangeMin" placeholder="Min" required>
-            <input type="number" id="rangeMax" placeholder="Max" required>
+            <input type="number" id="rangeMin" placeholder="Min" value="1" required>
+            <input type="number" id="rangeMax" placeholder="Max" value="100" required>
         </div>
         <div class="form-group">
             <label for="quantity">Number of questions:</label><br>
-            <input type="number" id="quantity" min="1" required>
+            <input type="number" id="quantity" min="1" value="5" required>
         </div>
         <div class="form-group">
             <label for="roundNumbers">Only round numbers:</label>
