--- a/pages/math/time.html
+++ b/pages/math/time.html
@@ -94,6 +94,7 @@
         <h2>Your Results</h2>
         <button id="retryButton">Retry</button>
     </div>
+    <a href="../../index.html">Back to Index</a>
 </div>
 
 <script>
